analyzed the dataset

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,31 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "a99f3f19-988a-4b77-b337-22fac98333cf",
+   "execution_count": 11,
+   "id": "56b838bf-50bf-4770-a9b1-d613aeb0075a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'D:\\\\eda_project'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
-    "os.chdir(r\"D:\\eda_project\")\n",
-    "os.getcwd()\n"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "pd.set_option(\"display.max_columns\", None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "a20a5c1f-f56d-4258-be93-1abafb0c88b6",
+   "execution_count": 12,
+   "id": "5fbddb0d-a385-4e4d-b69c-12b3f399a3a0",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +59,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>13542</td>\n",
-       "      <td>2024-12-17</td>\n",
+       "      <td>17-12-2024</td>\n",
        "      <td>784</td>\n",
        "      <td>10</td>\n",
        "      <td>Electronics</td>\n",
@@ -85,7 +75,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>23188</td>\n",
-       "      <td>2024-06-01</td>\n",
+       "      <td>01-06-2024</td>\n",
        "      <td>682</td>\n",
        "      <td>50</td>\n",
        "      <td>Sports &amp; Outdoors</td>\n",
@@ -101,7 +91,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>55098</td>\n",
-       "      <td>2025-02-04</td>\n",
+       "      <td>04-02-2025</td>\n",
        "      <td>684</td>\n",
        "      <td>50</td>\n",
        "      <td>Sports &amp; Outdoors</td>\n",
@@ -117,7 +107,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>65208</td>\n",
-       "      <td>2024-10-28</td>\n",
+       "      <td>28-10-2024</td>\n",
        "      <td>204</td>\n",
        "      <td>40</td>\n",
        "      <td>Books &amp; Stationery</td>\n",
@@ -133,7 +123,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>63872</td>\n",
-       "      <td>2024-05-10</td>\n",
+       "      <td>10-05-2024</td>\n",
        "      <td>202</td>\n",
        "      <td>20</td>\n",
        "      <td>Fashion</td>\n",
@@ -152,11 +142,11 @@
       ],
       "text/plain": [
        "   customer_id  order_date  product_id  category_id       category_name  \\\n",
-       "0        13542  2024-12-17         784           10         Electronics   \n",
-       "1        23188  2024-06-01         682           50   Sports & Outdoors   \n",
-       "2        55098  2025-02-04         684           50   Sports & Outdoors   \n",
-       "3        65208  2024-10-28         204           40  Books & Stationery   \n",
-       "4        63872  2024-05-10         202           20             Fashion   \n",
+       "0        13542  17-12-2024         784           10         Electronics   \n",
+       "1        23188  01-06-2024         682           50   Sports & Outdoors   \n",
+       "2        55098  04-02-2025         684           50   Sports & Outdoors   \n",
+       "3        65208  28-10-2024         204           40  Books & Stationery   \n",
+       "4        63872  10-05-2024         202           20             Fashion   \n",
        "\n",
        "  product_name  quantity   price payment_method            city  review_score  \\\n",
        "0   Smartphone         2  373.36    Credit Card  New Oliviaberg           1.0   \n",
@@ -173,22 +163,77 @@
        "4      F   33  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "df = pd.read_csv(\"data/dataset.csv\")\n",
     "df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "ae5a8a57-8cfa-40fc-a56b-2bf35880ae6a",
+   "execution_count": 13,
+   "id": "3504d446-1e68-4389-a807-4b28b3af1264",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000, 13)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dataset has ____ rows and ____ columns\n",
+    "df.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28701af8-80a8-46aa-836c-0f9cf833086a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#“The dataset contains 1,000 records and 13 features related to customer purchases, \n",
+    "#including customer demographics, product details, pricing, and transaction metadata.”"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ee576de5-c832-49f0-9f85-29019a21c2e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['customer_id', 'order_date', 'product_id', 'category_id',\n",
+       "       'category_name', 'product_name', 'quantity', 'price', 'payment_method',\n",
+       "       'city', 'review_score', 'gender', 'age'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6aa00182-0996-4661-9e88-477a2aac2d98",
    "metadata": {},
    "outputs": [
     {
@@ -216,43 +261,336 @@
       "dtypes: float64(2), int64(5), object(6)\n",
       "memory usage: 101.7+ KB\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "df.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4cbba3b9-b4b4-43fb-a68a-0d6cc3dc0299",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>category_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>price</th>\n",
+       "      <th>review_score</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>799.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>55490.723000</td>\n",
+       "      <td>540.726000</td>\n",
+       "      <td>30.030000</td>\n",
+       "      <td>2.947000</td>\n",
+       "      <td>251.850660</td>\n",
+       "      <td>3.992491</td>\n",
+       "      <td>46.382000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>25910.185857</td>\n",
+       "      <td>261.737704</td>\n",
+       "      <td>14.370303</td>\n",
+       "      <td>1.413573</td>\n",
+       "      <td>139.194688</td>\n",
+       "      <td>1.239469</td>\n",
+       "      <td>16.569992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>10201.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>10.720000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>33857.000000</td>\n",
+       "      <td>311.750000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>128.525000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>32.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>54619.500000</td>\n",
+       "      <td>542.500000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>250.220000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>47.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>77848.500000</td>\n",
+       "      <td>770.750000</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>366.467500</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>61.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>99923.000000</td>\n",
+       "      <td>995.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>499.500000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>75.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "customer_id         0\n",
-       "order_date          0\n",
-       "product_id          0\n",
-       "category_id         0\n",
-       "category_name       0\n",
-       "product_name        0\n",
-       "quantity            0\n",
-       "price               0\n",
-       "payment_method      0\n",
-       "city                0\n",
-       "review_score      201\n",
-       "gender            103\n",
-       "age                 0\n",
-       "dtype: int64"
+       "        customer_id   product_id  category_id     quantity        price  \\\n",
+       "count   1000.000000  1000.000000  1000.000000  1000.000000  1000.000000   \n",
+       "mean   55490.723000   540.726000    30.030000     2.947000   251.850660   \n",
+       "std    25910.185857   261.737704    14.370303     1.413573   139.194688   \n",
+       "min    10201.000000   100.000000    10.000000     1.000000    10.720000   \n",
+       "25%    33857.000000   311.750000    20.000000     2.000000   128.525000   \n",
+       "50%    54619.500000   542.500000    30.000000     3.000000   250.220000   \n",
+       "75%    77848.500000   770.750000    40.000000     4.000000   366.467500   \n",
+       "max    99923.000000   995.000000    50.000000     5.000000   499.500000   \n",
+       "\n",
+       "       review_score          age  \n",
+       "count    799.000000  1000.000000  \n",
+       "mean       3.992491    46.382000  \n",
+       "std        1.239469    16.569992  \n",
+       "min        1.000000    18.000000  \n",
+       "25%        3.000000    32.000000  \n",
+       "50%        4.000000    47.000000  \n",
+       "75%        5.000000    61.000000  \n",
+       "max        5.000000    75.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.info()\n",
-    "df.isnull().sum()\n"
+    "df.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "25898a90-0c1d-4f20-80a5-a3174afdb51e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>order_date</th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>category_id</th>\n",
+       "      <th>category_name</th>\n",
+       "      <th>product_name</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>price</th>\n",
+       "      <th>payment_method</th>\n",
+       "      <th>city</th>\n",
+       "      <th>review_score</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>75474</td>\n",
+       "      <td>22-05-2024</td>\n",
+       "      <td>107</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Books &amp; Stationery</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>1</td>\n",
+       "      <td>117.47</td>\n",
+       "      <td>Credit Card</td>\n",
+       "      <td>Levyport</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>993</th>\n",
+       "      <td>94141</td>\n",
+       "      <td>01-09-2024</td>\n",
+       "      <td>701</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Fashion</td>\n",
+       "      <td>Skirt</td>\n",
+       "      <td>4</td>\n",
+       "      <td>270.32</td>\n",
+       "      <td>Bank Transfer</td>\n",
+       "      <td>North Jeannemouth</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>94316</td>\n",
+       "      <td>14-06-2024</td>\n",
+       "      <td>979</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Home &amp; Living</td>\n",
+       "      <td>Vase</td>\n",
+       "      <td>1</td>\n",
+       "      <td>146.35</td>\n",
+       "      <td>Bank Transfer</td>\n",
+       "      <td>Garzachester</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>95322</td>\n",
+       "      <td>14-03-2025</td>\n",
+       "      <td>621</td>\n",
+       "      <td>50</td>\n",
+       "      <td>Sports &amp; Outdoors</td>\n",
+       "      <td>Running Shoes</td>\n",
+       "      <td>2</td>\n",
+       "      <td>34.61</td>\n",
+       "      <td>Credit Card</td>\n",
+       "      <td>Marcusville</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>843</th>\n",
+       "      <td>79723</td>\n",
+       "      <td>16-07-2024</td>\n",
+       "      <td>568</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>Smartwatch</td>\n",
+       "      <td>1</td>\n",
+       "      <td>393.90</td>\n",
+       "      <td>Bank Transfer</td>\n",
+       "      <td>Popeview</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     customer_id  order_date  product_id  category_id       category_name  \\\n",
+       "16         75474  22-05-2024         107           40  Books & Stationery   \n",
+       "993        94141  01-09-2024         701           20             Fashion   \n",
+       "95         94316  14-06-2024         979           30       Home & Living   \n",
+       "80         95322  14-03-2025         621           50   Sports & Outdoors   \n",
+       "843        79723  16-07-2024         568           10         Electronics   \n",
+       "\n",
+       "      product_name  quantity   price payment_method               city  \\\n",
+       "16        Notebook         1  117.47    Credit Card           Levyport   \n",
+       "993          Skirt         4  270.32  Bank Transfer  North Jeannemouth   \n",
+       "95            Vase         1  146.35  Bank Transfer       Garzachester   \n",
+       "80   Running Shoes         2   34.61    Credit Card        Marcusville   \n",
+       "843     Smartwatch         1  393.90  Bank Transfer           Popeview   \n",
+       "\n",
+       "     review_score gender  age  \n",
+       "16            4.0      M   73  \n",
+       "993           5.0      M   48  \n",
+       "95            2.0      M   18  \n",
+       "80            5.0      M   43  \n",
+       "843           5.0      M   44  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Observed some cancelled transactions with negative quantity\n",
+    "df.sample(5)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56b838bf-50bf-4770-a9b1-d613aeb0075a",
+   "id": "3342485d-d10d-4b61-8249-8f9b71ba56b4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#The dataset contains 1,000 purchase records with information about customers, products, and transactions.\n",
+    "#Most columns are complete, but review_score and gender have missing values.\n",
+    "#The order_date column is currently stored as an object and will need conversion to datetime for time-based analysis.\n",
+    "#The dataset appears suitable for analyzing customer behavior, product performance, and sales trends."
+   ]
   }
  ],
  "metadata": {
